--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "react-scripts",
-  "version": "0.8.5",
-  "description": "Configuration and scripts for Create React App.",
-  "repository": "facebookincubator/create-react-app",
+  "name": "@sqlpad/react-scripts",
+  "version": "0.0.1",
+  "description": "Configuration and scripts for sqlpad's Create React App.",
+  "repository": "rickbergfalk/create-react-app",
   "license": "BSD-3-Clause",
   "engines": {
     "node": ">=4"
   },
   "bugs": {
-    "url": "https://github.com/facebookincubator/create-react-app/issues"
+    "url": "https://github.com/rickbergfalk/create-react-app/issues"
   },
   "files": [
     ".babelrc",
